# kivoai-platform

./: README.md  package.json  pyproject.toml  wrangler.jsonc
src/: exception.py  worker.py
src/application/: settings.py  urls.py
src/apps/: __init__.py
src/apps/auth/: views.py
src/apps/chat/: views.py
src/apps/tasks/: views.py
src/apps/token/: views.py
src/core/: Auth.py  __init__.py  exception.py  logger.py  middleware.py  moudles.py  validator.py
src/crud/: common.py
src/scripts/: tasks.json
src/utils/: response.py  tools.py
