[project]
name = "kivoai-platform"
version = "0.1.0"
description = "Python fastapi example"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "webtypy>=0.1.7",
    "fastapi",
    "markupsafe",
    "jinja2",
    "pydantic",
    "loguru",
    "orjson",
]

[dependency-groups]
dev = [
    "workers-py",
    "workers-runtime-sdk"
]
